--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 /target
-
-
-# Added by cargo
-#
-# already existing elements were commented out
-
-#/target
+src/bpf-skel
+.vscode/
+.cargo/config.toml
+/static_libs
