--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,19 +12,18 @@ name = "binderdump"
 path = "src/bin.rs"
 
 [dependencies]
+anyhow = "1.0.85"
 env_logger = "0.11.3"
+libc = "0.2.155"
 log = "0.4.21"
+nix = "0.28.0"
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
-libbpf-rs = "0.22.1"
+libbpf-rs = { version = "0.22.1" }
 
 [target.'cfg(target_os = "android")'.dependencies]
 libbpf-rs = { version = "0.22.1", features = ["static"] }
 android_logger = "0.13"
 
 [build-dependencies]
-autotools = "0.2.7"
-cc = "1.0.97"
-copy_dir = "0.1.3"
-pkg-config = "0.3.30"
-
+libbpf-cargo = "0.23.1"
