--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ anyhow = "1.0.85"
 env_logger = "0.11.3"
 libc = "0.2.155"
 log = "0.4.21"
-nix = "0.28.0"
+nix = {version = "0.28.0", features = ["ioctl"] }
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
 libbpf-rs = { version = "0.22.1" }
@@ -26,4 +26,5 @@ libbpf-rs = { version = "0.22.1", features = ["static"] }
 android_logger = "0.13"
 
 [build-dependencies]
+bindgen = "0.69.4"
 libbpf-cargo = "0.23.1"
