--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ num-traits = "0.2"
 plain = "0.2"
 pretty-hex = "0.4.1"
 procfs = { version = "0.16.0", default-features = false }
+yansi = "1.0.1"
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
 libbpf-rs = { version = "0.23.2" }
