--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ path = "src/bin.rs"
 
 [dependencies]
 android_system_properties = "0.1.5"
-anyhow = "1.0.85"
+anyhow = { version = "1.0.85", features = ["backtrace"] }
+backtrace = "0.3.73"
 binrw = "0.14.0"
 env_logger = "0.11.3"
 libc = "0.2.155"
