--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ binrw = "0.14.0"
 env_logger = "0.11.3"
 libc = "0.2.155"
 log = "0.4.21"
-nix = { version = "0.29.0", features = ["ioctl"] }
+nix = { version = "0.29.0", features = ["ioctl", "time"] }
 num = "0.4"
 num-derive = "0.4"
 num-traits = "0.2"
