--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ plain = "0.2"
 pretty-hex = "0.4.1"
 procfs = { version = "0.16.0", default-features = false }
 yansi = "1.0.1"
+ctrlc = { version = "3.4.4", features = ["termination"] }
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
 libbpf-rs = { version = "0.23.2" }
