--- a/binderdump-structs/Cargo.toml
+++ b/binderdump-structs/Cargo.toml
@@ -1,7 +1,10 @@
+cargo-features = ["per-package-target"]
+
 [package]
 name = "binderdump-structs"
 version = "0.1.0"
 edition = "2021"
+forced-target = "x86_64-unknown-linux-gnu"
 
 [dependencies]
 anyhow = "1.0.86"
@@ -12,3 +15,6 @@ num-derive = "0.4"
 num-traits = "0.2"
 nix = { version = "0.29.0", features = ["ioctl"] }
 plain = "0.2"
+serde = { version = "1.0.203", features = ["derive"] }
+serde_repr = "0.1.19"
+thiserror = "1.0.61"
