--- a/binderdump-epan-sys/Cargo.toml
+++ b/binderdump-epan-sys/Cargo.toml
@@ -1,11 +1,14 @@
 cargo-features = ["per-package-target"]
 
 [package]
-name = "bindump-epan-sys"
+name = "binderdump-epan-sys"
 version = "0.1.0"
 edition = "2021"
 links = "wireshark"
 forced-target = "x86_64-unknown-linux-gnu"
+
+[lib]
+doctest = false
 
 [dependencies]
 
