--- a/binderdump-derive/Cargo.toml
+++ b/binderdump-derive/Cargo.toml
@@ -11,3 +11,6 @@ binderdump-trait = { version = "0.1.0", path = "../binderdump-trait" }
 proc-macro2 = "1.0.86"
 quote = "1.0.36"
 syn = { version = "2.0.68", features = ["extra-traits"] }
+
+[dev-dependencies]
+pretty_assertions = "1.4.0"
